--- a/.env.example
+++ b/.env.example
@@ -3,24 +3,31 @@
 # Database
 POSTGRES_DB=susbonk
 POSTGRES_USER=susbonk
-POSTGRES_PASSWORD=susbonk_dev
+# SECURITY: Generate with: openssl rand -base64 32
+POSTGRES_PASSWORD=CHANGE_ME_GENERATE_RANDOM_PASSWORD
 
 # Redis
-# No specific config needed for development
+# SECURITY: Generate with: openssl rand -hex 16
+REDIS_PASSWORD=CHANGE_ME_GENERATE_RANDOM_PASSWORD
 
 # OpenSearch
-OPENSEARCH_PASSWORD=Admin123!
+# SECURITY: Generate with: openssl rand -base64 32
+OPENSEARCH_PASSWORD=CHANGE_ME_GENERATE_RANDOM_PASSWORD
 
 # Backend
-SECRET_KEY=dev_secret_key_change_in_production
+# SECURITY: Generate with: openssl rand -base64 32
+SECRET_KEY=CHANGE_ME_GENERATE_RANDOM_PASSWORD
 ENVIRONMENT=development
 ALLOWED_HOSTS=localhost,127.0.0.1
 CORS_ORIGINS=http://localhost:5173,http://localhost:3000
 
 # Django Admin
+# SECURITY: Generate with: python -c "from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())"
+DJANGO_SECRET_KEY=CHANGE_ME_GENERATE_DJANGO_SECRET
 DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_EMAIL=admin@susbonk.local
-DJANGO_SUPERUSER_PASSWORD=admin
+# SECURITY: Use strong password (min 12 chars, mixed case, numbers, symbols)
+DJANGO_SUPERUSER_PASSWORD=CHANGE_ME_USE_STRONG_PASSWORD
 
 # Telegram Bot
 TELEGRAM_BOT_TOKEN=your_bot_token_here
